--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "svg": "^0.1.0",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
