--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "fetch": "^1.1.0",
     "google-map-react": "^2.1.10",
+    "mui-datatables": "^3.8.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
